classDiagram
    %% ===== MODELOS =====
    class Libro {
        -isbn : String
        -titulo : String
        -autor : String
        -categoria : String
        -cantidadTotal : int
        -cantidadDisponible : int
        +estaDisponible() : boolean
        +reducirDisponibilidad() : void
        +aumentarDisponibilidad() : void
    }

    class Socio {
        -id : String
        -nombre : String
        -documento : String
        -telefono : String
        -email : String
        -multaAcumulada : double
        +tieneMultasPendientes() : boolean
        +acumularMulta(monto : double) : void
        +pagarMulta(monto : double) : void
    }

    class Prestamo {
        -id : String
        -libro : Libro
        -socio : Socio
        -fechaPrestamo : Date
        -fechaVencimiento : Date
        -fechaDevolucion : Date
        -multaGenerada : double
        -devuelto : boolean
        +estaVencido() : boolean
        +calcularMulta() : double
        +registrarDevolucion() : void
    }

    %% ===== REPOSITORIOS =====
    class Repository {
        <<interface>>
        +agregar(item) : void
        +buscarPorId(id : String)
        +listar()
        +eliminar(id : String) : void
    }

    class LibroRepository {
        -libros : Libro[]
        +buscarPorCriterio(criterio : String)
    }

    class SocioRepository {
        -socios : Socio[]
    }

    class PrestamoRepository {
        -prestamos : Prestamo[]
        +listarActivos()
        +listarPorSocio(socioId : String)
    }

    %% ===== SERVICIOS =====
    class CatalogoService {
        -libroRepository : LibroRepository
        +agregarLibro(libro : Libro) : void
        +eliminarLibro(isbn : String) : void
        +buscarLibro(criterio : String)
    }

    class SocioService {
        -socioRepository : SocioRepository
        +registrarSocio(socio : Socio) : void
        +editarSocio(id : String, datos) : void
        +eliminarSocio(id : String) : void
        +tieneMultasPendientes(id : String) : boolean
    }

    class PrestamoService {
        -libroRepository : LibroRepository
        -socioRepository : SocioRepository
        -prestamoRepository : PrestamoRepository
        -politicaMulta : PoliticaMulta
        +realizarPrestamo(socio : Socio, libro : Libro)
        +registrarDevolucion(idPrestamo : String) : void
        +listarPrestamosActivos()
        +generarReporteMasPrestados()
    }

    class PoliticaMulta {
        <<interface>>
        +calcular(diasAtraso : int) : double
    }

    class PoliticaMultaFija {
        -montoPorDia : double
        +calcular(diasAtraso : int) : double
    }

    %% ===== UI =====
    class MenuCommand {
        <<interface>>
        +descripcion : String
        +ejecutar() : void
    }

    class RegistrarLibroCommand {
        -catalogoService : CatalogoService
        -prompts : Prompts
        +ejecutar() : void
    }

    class RealizarPrestamoCommand {
        -prestamoService : PrestamoService
        -socioRepository : SocioRepository
        -libroRepository : LibroRepository
        -prompts : Prompts
        +ejecutar() : void
    }

    class Menu {
        -comandos : MenuCommand[]
        -prompts : Prompts
        +mostrar() : void
        +ejecutarOpcion(indice : int) : void
        +iniciar() : void
    }

    class Prompts {
        +preguntar(texto : String) : String
        +cerrar() : void
    }

    %% ===== RELACIONES =====
    Repository <|.. LibroRepository
    Repository <|.. SocioRepository
    Repository <|.. PrestamoRepository

    PoliticaMulta <|.. PoliticaMultaFija

    MenuCommand <|.. RegistrarLibroCommand
    MenuCommand <|.. RealizarPrestamoCommand

    LibroRepository "1" o-- "*" Libro
    SocioRepository "1" o-- "*" Socio
    PrestamoRepository "1" o-- "*" Prestamo

    Prestamo --> Libro
    Prestamo --> Socio

    CatalogoService --> LibroRepository
    SocioService --> SocioRepository

    PrestamoService --> LibroRepository
    PrestamoService --> SocioRepository
    PrestamoService --> PrestamoRepository
    PrestamoService --> PoliticaMulta

    RegistrarLibroCommand --> CatalogoService
    RealizarPrestamoCommand --> PrestamoService

    Menu "1" o-- "*" MenuCommand
    Menu --> Prompts
